#102: Restructure code into multi maven module.